--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -8,7 +8,6 @@ clusterName: ''
 # Agones Values
 agones:
   enable: false
-
 # App Mesh Values
 appMesh:
   enable: false
@@ -162,7 +161,7 @@ thanos:
 
 # Traefik Values
 traefik:
-  enable: false
+  enable: true
 
 # VPA Values
 vpa:
